# helple

./: Cargo.toml  Makefile  README.md
extension/: background.js  content.js  glue-helpers.js  helple_bg.wasm  manifest.json
src/: lib.rs  main.rs
support/: guess.js  scraper.js  typer.js  words
