[package]
name = "helple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
unicode-segmentation = "1.8.0"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }

[lib]
crate-type = ["cdylib", "rlib"]